--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -1,8 +1,15 @@
 <resources>
 
-    <string name="app_name">TileMapExample</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="app_name">VTM OsmScout</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_map">MapActivity</string>
+    <string name="theme_default">Default</string>
+    <string name="theme_tubes">Tubes</string>
+    <string name="theme_osmarender">Osmarender</string>
+    <string name="theme_newtron">NewTron</string>
+    <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
+    <string name="error">Error</string>
+    <string name="file_invalid">The selected file is invalid.</string>
 
 </resources>
